@@ -51,6 +51,7 @@ SVN trunk (1.1.x):
    * clicking on unit portrait in status pane now centers on unit (#3388)
    * show numbers of each enemy which can reach tiles in "Show Enemy Moves"
    * don't show "The End" after viewing a won multiplayer replay (#4166)
+   * new option to toggle server messages when observing games (patch by grzywacs)
  * graphics
    * units can now have colors redefined to match team colors
    * team color can be defined in the side tag with "team_rgb=r,g,b"
